# ff14-schedule-gas-and-bot

./: .clasp-sample.json
bot/: go.mod  main.go
bot/cron-worker/: Cargo.toml
bot/cron-worker/src/: main.rs
bot/shared-lib/: Cargo.toml
bot/shared-lib/src/: lib.rs
gas/src/: appsscript.json
src/: discord_bot.js  schedule.js  scuedule.js  sheet.js
