[package]
name = "cron-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
worker = "0.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }

[dependencies.shared-lib]
path = "../shared-lib"
